[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "Test ToDo application"
authors = ["Robert Carr <bcarr@breezeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
bandit = "^1.7.9"
safety = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
